# study_CG

./: .gitignore  README.md
lab2/: CMakeLists.txt  imgui.ini
lab2/shaders/: sprite.vs
lab2/source/: AnimatedSprite.h  Game.cpp  Game.h  Player.h  ResourceManager.h  main.cpp  texture.h
lab3/: CMakeLists.txt  CMakePresets.json  imgui.ini
lab3/assets/data/: knight.json  tileset.json
lab3/shaders/: sprite.vs
lab3/source/: AnimatedSprite.h  Game.cpp  Game.h  Player.h  Player2.h  main.cpp  spriteRenderer.h
lab3/source/Core/: Game.cpp  Game.h  main.cpp
lab3/source/Managers/: ResourceManager.cpp  ResourceManager.h  SpriteLoader.h
lab3/source/Objects/: AnimatedSprite2D.h  Entity.h  Player.h  Sprite2D.h  TileMap.h
lab3/source/Renderer/: Program.cpp  Program.h  spriteRenderer.cpp  spriteRenderer.h  texture2D.cpp
